# upstage-fastapi-backend

./: .gitignore  pyproject.toml
.github/ISSUE_TEMPLATE/: lecture_sample.yml
app/: main.py
app/core/: config.py  db.py  settings.py
