[project]
name = "upstage-2-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "psycopg[binary]>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
]
